<resources>
    <string name="app_name">Hotel</string>
    <string name="hotel">Отель</string>
    <string name="sample_hotel_name">Steigenberger Makadi</string>
    <string name="order_paid">Заказ оплачен</string>
    <string name="order_processed">Ваш заказ принят в работу</string>
    <string name="order_confirmation">Подтверждение заказа №104893 может занять некоторое время (от 1 часа до суток). Как только мы получим ответ от туроператора, вам на почту придет уведомление.</string>
    <string name="booking">Бронирование</string>
    <string name="buyer_info">Информация о покупателе</string>
    <string name="phone_number_sample">+7 (951) 555-99-00</string>
    <string name="email_sample">examplemail.000@mail.ru</string>
    <string name="user_privacy_sample">Эти данные не передаются никому. После оплаты мы отправим вам чек на указанный номер и адрес электронной почты.</string>
    <string name="add_tourist">Добавить туриста</string>
    <string name="invalid_email_error">Неверный Почта</string>
    <string name="first_tourist">Первый турист</string>
    <string name="date_of_birth">Дата рождения</string>
    <string name="name">Имя</string>
    <string name="surname">Фамилия</string>
    <string name="citizenship">Гражданство</string>
    <string name="passport_number">Номер паспорта</string>
    <string name="passport_validity_period">Срок действия паспорта</string>
    <string name="fill_all_fields">Заполните все поля правильно, пожалуйста!</string>
    <string name="email">Адрес электронной почты</string>
    <string name="about_the_hotel">О отеле</string>
    <string name="_3rd_line">Бесплатный фитнес-клуб</string>
    <string name="paid_wi_fi_in_the_lobby">Бесплатный Wifi на всей территории отеля</string>
    <string name="_30_km_to_the_airport">30 км до аэропорта</string>
    <string name="_1_km_to_the_beach">1 км до пляжа</string>
    <string name="madinat_makadi_madinat_road_madinat_bay_precinct">Мадинат Макади, Мадинат-роуд, Мадинат-бей, Прецинкт</string>
    <string name="with_a_flight">За тур с перелётом</string>
    <string name="vip_class_hotel_with_its_own_golf_courses_high_level_of_service_we_recommend_it_for_a_respectable_holiday_the_hotel_accepts_guests_over_18_years_of_age">Отель VIP-класса с собственными полями для гольфа. Высокий уровень обслуживания. Мы рекомендуем его для уважительного отдыха. Отель принимает гостей старше 18 лет!</string>
    <string name="convenience">Удобство</string>
    <string name="essentials">Самое необходимое</string>
    <string name="what_s_included">Что включено</string>
    <string name="what_s_not_included">Что не включено</string>
    <string name="to_room_selection">К выбору номера</string>
    <string name="hotel_view">Стандартный с видом на бассейн или сад</string>
    <string name="all_inclusive">Все включено</string>
    <string name="air_conditioner">Кондиционер</string>
    <string name="more_about_the_room">Подробнее о номере</string>
    <string name="room_cost">186 600 ₽</string>
    <string name="for_7_nights">за 7 ночей с перелётом</string>
    <string name="choose_number">Выбрать номер</string>
    <string name="_super">Супер!</string>
    <string name="_5_perfect">5 Превосходно</string>
    <string name="departure">Вылет из</string>
    <string name="saint_petersburg">Санкт-Петербург</string>
    <string name="country_city">Страна, город</string>
    <string name="egypt_hurghada">Египет, Хургада</string>
    <string name="dates">Даты</string>
    <string name="days">19.09.2023 – 27.09.2023</string>
    <string name="number_of_nights">Кол-во ночей</string>
    <string name="_7_nights">7 ночей</string>
    <string name="number">Номер</string>
    <string name="nutrition">Питание</string>
    <string name="phone_number">Номер телефона</string>
    <string name="mask">+7 (***) ***-**-**</string>
    <string name="email_label">Почта</string>
    <string name="tour">Тур</string>
    <string name="fuel_surcharge">Топливный сбор</string>
    <string name="service_fee">Сервисный сбор</string>
    <string name="to_pay">К оплате</string>
    <string name="payment">Оплатить</string>
</resources>

<!--
<resources>
<string name="app_name">HotelDto</string>
<string name="hotel">HotelDto</string>
<string name="sample_hotel_name">Steigenberger Makadi</string>
<string name="order_paid">Order has been paid</string>
<string name="order_processed">Your order has been processed</string>
<string name="order_confirmation">Confirmation of order No. 104893 may take some time (from 1 hour to 24 hours). As soon as we receive a response from the tour operator, you will receive a notification by email.</string>
<string name="booking">BookingDto</string>
<string name="buyer_info">Buyer Information</string>
<string name="phone_number_sample">+7 (951) 555-99-00</string>
<string name="email_sample">examplemail.000@mail.ru</string>
<string name="user_privacy_sample">This data is not shared with anyone. After payment, we sent a check to the number and email you specified.</string>
<string name="add_tourist">Add a tourist</string>
<string name="invalid_email_error">Invalid Email!</string>
<string name="first_tourist">First Tourist</string>
<string name="date_of_birth">Date of Birth</string>
<string name="name">Name</string>
<string name="surname">Surname</string>
<string name="citizenship">Citizenship</string>
<string name="passport_number">Passport Number</string>
<string name="passport_validity_period">Passport Validity Period</string>
<string name="fill_all_fields">Fill out all fields correctly, please!</string>
<string name="email">Email</string>
<string name="about_the_hotel">About the hotel</string>
<string name="_3rd_line">3rd line</string>
<string name="paid_wi_fi_in_the_lobby">Paid Wi-Fi in the lobby</string>
<string name="_30_km_to_the_airport">30 km to the airport</string>
<string name="_1_km_to_the_beach">1 km to the beach</string>
<string name="madinat_makadi_madinat_road_madinat_bay_precinct">Madinat Makadi, Madinat Road, Madinat Bay, Precinct</string>
<string name="with_a_flight">with a flight</string>
<string name="vip_class_hotel_with_its_own_golf_courses_high_level_of_service_we_recommend_it_for_a_respectable_holiday_the_hotel_accepts_guests_over_18_years_of_age">VIP-class hotel with its own golf courses. High level of service. We recommend it for a respectable holiday. The hotel accepts guests over 18 years of age!</string>
<string name="convenience">Convenience</string>
<string name="essentials">Essentials</string>
<string name="what_s_included">What\'s included</string>
<string name="what_s_not_included">What\'s not included</string>
<string name="to_room_selection">To room selection</string>
<string name="hotel_view">Standard Pool or Garden View</string>
<string name="all_inclusive">All inclusive</string>
<string name="air_conditioner">Air conditioner</string>
<string name="more_about_the_room">More about the room</string>
<string name="room_cost">186 600 ₽</string>
<string name="for_7_nights">for 7 nights with flights</string>
<string name="choose_number">Choose Number</string>
<string name="_super">Super!</string>
<string name="_5_perfect">5 Perfect</string>
<string name="departure">Departure</string>
<string name="saint_petersburg">Saint Petersburg</string>
<string name="country_city">Country, city</string>
<string name="egypt_hurghada">Egypt, Hurghada</string>
<string name="dates">Dates</string>
<string name="days">19.09.2023 – 27.09.2023</string>
<string name="number_of_nights">Number of nights</string>
<string name="_7_nights">7 nights</string>
<string name="number">Number</string>
<string name="nutrition">Nutrition</string>
<string name="phone_number">Phone Number</string>
<string name="mask">+7 (***) ***-**-**</string>
<string name="email_label">Email</string>
<string name="tour">Tour</string>
<string name="fuel_surcharge">Fuel surcharge</string>
<string name="service_fee">Service fee</string>
<string name="to_pay">To pay</string>
<string name="payment">Pay 198 036 ₽</string>
</resources>-->
